netwerk/protocol/http/nsHttpConnectionMgr.cpp
@@ -1714,7 +1714,10 @@ void nsHttpConnectionMgr::IncrementActiveConnCount() {
 }
 
 void nsHttpConnectionMgr::DecrementActiveConnCount(HttpConnectionBase* conn) {
-  mNumActiveConns--;
+  MOZ_DIAGNOSTIC_ASSERT(mNumActiveConns > 0);
+  if (mNumActiveConns > 0) {
+    mNumActiveConns--;
+  }
 
   RefPtr<nsHttpConnection> connTCP = do_QueryObject(conn);
   if (!connTCP || connTCP->EverUsedSpdy()) mNumSpdyHttp3ActiveConns--;
@@ -1727,7 +1730,11 @@ void nsHttpConnectionMgr::StartedConnect() {
 }
 
 void nsHttpConnectionMgr::RecvdConnect() {
-  mNumActiveConns--;
+  MOZ_DIAGNOSTIC_ASSERT(mNumActiveConns > 0);
+  if (mNumActiveConns > 0) {
+    mNumActiveConns--;
+  }
+
   ConditionallyStopTimeoutTick();
 }
 
